@@ -1,6 +1,6 @@
 {
   "name": "simp-simp_gitlab",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "author": "SIMP Team",
   "summary": "SIMP profiles for GitLab",
   "license": "Apache-2.0",
@@ -17,7 +17,7 @@
   "dependencies": [
     {
       "name": "puppet/chrony",
-      "version_requirement": ">= 1.0.0 < 2.0.0"
+      "version_requirement": ">= 1.0.0 < 3.0.0"
     },
     {
       "name": "herculesteam/augeasproviders_ssh",
@@ -25,11 +25,11 @@
     },
     {
       "name": "puppet/gitlab",
-      "version_requirement": ">= 6.0.1 < 8.0.0"
+      "version_requirement": ">= 6.0.1 < 9.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 6.6.0 < 8.0.0"
+      "version_requirement": ">= 6.6.0 < 9.0.0"
     },
     {
       "name": "simp/iptables",
